# BScThesis

./: .gitignore  .gitmodules  README.md
thesis_ws/src/pack_agent/: CMakeLists.txt  package.xml
thesis_ws/src/pack_agent/include/pack_agent/agent/: agent_node.h  extern_variables.h
thesis_ws/src/pack_agent/include/pack_agent/agent/skill/: control_tools.h  pid.h  skill.h  skill_direct_velocity.h  skill_gotopoint.h  skill_gotopoint_avoid.h  skill_none.h
thesis_ws/src/pack_agent/src/agent/: agent_exec.cpp  agent_node.cpp  agent_param_exec.cpp
thesis_ws/src/pack_agent/src/agent/skill/: control_tools.cpp  pid.cpp  skill.cpp  skill_direct_velocity.cpp  skill_gotopoint.cpp  skill_gotopoint_avoid.cpp  skill_none.cpp
thesis_ws/src/pack_ai/: CMakeLists.txt  package.xml
thesis_ws/src/pack_ai/include/pack_ai/ai/: ai_node.h  coach.h  extern_variables.h
thesis_ws/src/pack_ai/include/pack_ai/ai/tools/: graph.h
thesis_ws/src/pack_ai/src/ai/: ai_exec.cpp  ai_node.cpp  coach.cpp
thesis_ws/src/pack_ai/src/ai/tools/: graph.cpp
thesis_ws/src/pack_gui/: CMakeLists.txt  package.xml
thesis_ws/src/pack_gui/include/pack_gui/interface/: extern_variables.h  interface_node.h
thesis_ws/src/pack_gui/include/pack_gui/interface/mainwindow/: mainwindow.h
thesis_ws/src/pack_gui/include/pack_gui/interface/mainwindow/dynamic_reconfigure/: dynamic_reconfigure.h  param_widget.h
thesis_ws/src/pack_gui/include/pack_gui/interface/mainwindow/soccer_view/: soccer_view.h
thesis_ws/src/pack_gui/src/interface/: interface_exec.cpp  interface_node.cpp
thesis_ws/src/pack_gui/src/interface/mainwindow/: mainwindow.cpp
thesis_ws/src/pack_gui/src/interface/mainwindow/dynamic_reconfigure/: dynamic_reconfigure.cpp  param_widget.cpp
thesis_ws/src/pack_gui/src/interface/mainwindow/soccer_view/: soccer_view.cpp
thesis_ws/src/pack_msgs/: CMakeLists.txt  package.xml
thesis_ws/src/pack_msgs/msg/: PlotWorldModel.msg  Robot.msg  RobotCommand.msg  SSLVisionDetection.msg  SSLVisionDetectionBall.msg  SSLVisionDetectionRobot.msg  SSLVisionGeomCameracalibration.msg  SSLVisionGeomField.msg  SSLVisionGeomFieldArc.msg  SSLVisionGeomFieldLine.msg  SSLVisionGeometry.msg  SSLVisionWrapper.msg  SandBox.msg  ShapeLine.msg  ShapeRect.msg  ShapeTriangle.msg  Shapes.msg  Skill.msg  SkillDirectVelocity.msg  SkillGotoPoint.msg  SkillGotoPointAvoid.msg  WorldModel.msg
thesis_ws/src/pack_msgs/srv/: GrsimBallReplacement.srv  GrsimRobotReplacement.srv
thesis_ws/src/pack_protobuf_wrapper/: CMakeLists.txt  package.xml
thesis_ws/src/pack_protobuf_wrapper/include/pack_protobuf_wrapper/common/net/: netraw.h  robocup_ssl_client.h  udpsend.h
thesis_ws/src/pack_protobuf_wrapper/include/pack_protobuf_wrapper/grsim/: grsim_node.h
thesis_ws/src/pack_protobuf_wrapper/include/pack_protobuf_wrapper/proto/: grSim_Replacement.pb.cc  grSim_Replacement.pb.h  referee.pb.cc  referee.pb.h
thesis_ws/src/pack_protobuf_wrapper/include/pack_protobuf_wrapper/vision/: vision_node.h
thesis_ws/src/pack_protobuf_wrapper/include/pack_protobuf_wrapper/vision/convert/: convert_detection.h  convert_geometry.h  convert_units.h
thesis_ws/src/pack_protobuf_wrapper/proto/: grSim_Replacement.proto
thesis_ws/src/pack_protobuf_wrapper/src/common/net/: netraw.cpp  robocup_ssl_client.cpp  udpsend.cpp
thesis_ws/src/pack_protobuf_wrapper/src/grsim/: grsim_exec.cpp  grsim_node.cpp
thesis_ws/src/pack_protobuf_wrapper/src/vision/: vision_exec.cpp  vision_node.cpp
thesis_ws/src/pack_protobuf_wrapper/src/vision/convert/: convert_detection.cpp  convert_geometry.cpp  convert_units.cpp
thesis_ws/src/pack_util/: CMakeLists.txt  package.xml
thesis_ws/src/pack_util/include/pack_util/control/: general.h  pid.h  potential_field.h
thesis_ws/src/pack_util/include/pack_util/core/: base.h  drawer.h  field.h  knowledge.h  skill_handler.h
thesis_ws/src/pack_util/include/pack_util/geom/: angle_deg.h  circle_2d.h  geom.h  line_2d.h  matrix_2d.h  polygon_2d.h  ray_2d.h  rect_2d.h  region_2d.h  sector_2d.h  segment_2d.h  size_2d.h  triangle_2d.h  vector_2d.h
thesis_ws/src/pack_util/include/pack_util/math/: mathtools.h  matrix.h
thesis_ws/src/pack_util/src/control/: general.cpp  pid.cpp  potential_field.cpp
thesis_ws/src/pack_util/src/core/: drawer.cpp  field.cpp  knowledge.cpp  skill_handler.cpp
thesis_ws/src/pack_util/src/geom/: angle_deg.cpp  circle_2d.cpp  line_2d.cpp  matrix_2d.cpp  polygon_2d.cpp  ray_2d.cpp  rect_2d.cpp  region_2d.cpp  sector_2d.cpp  segment_2d.cpp  size_2d.cpp  triangle_2d.cpp  vector_2d.cpp
thesis_ws/src/pack_util/src/math/: mathtools.cpp  matrix.cpp
thesis_ws/src/pack_util/tools/: env.zsh
thesis_ws/src/pack_util/tools/launch/: grsim_launch.py  grsim_launch_noGUI.py
thesis_ws/src/pack_util/tools/params/: config_params.yaml
thesis_ws/src/pack_world_model/: CMakeLists.txt  package.xml
thesis_ws/src/pack_world_model/include/pack_world_model/simple_worldmodel/: simple_worldmodel_node.h
thesis_ws/src/pack_world_model/include/pack_world_model/simple_worldmodel/kalman_filter/: kalman_filter.h  moving_object.h
thesis_ws/src/pack_world_model/include/pack_world_model/worldmodel/: worldmodel_node.h
thesis_ws/src/pack_world_model/include/pack_world_model/worldmodel/util/: balltracker.h  config.h  kalman.h  newkalman.h  robottracker.h  tracker.h
thesis_ws/src/pack_world_model/include/pack_world_model/worldmodel/wm/: ball.h  halfworld.h  movingobject.h  rawobject.h  robot.h  visionbelief.h  visionclient.h  worldmodel.h
thesis_ws/src/pack_world_model/src/simple_worldmodel/: simple_worldmodel_exec.cpp  simple_worldmodel_node.cpp
thesis_ws/src/pack_world_model/src/simple_worldmodel/kalman_filter/: kalman_filter.cpp  moving_object.cpp
thesis_ws/src/pack_world_model/src/worldmodel/: worldmodel_exec.cpp  worldmodel_node.cpp
thesis_ws/src/pack_world_model/src/worldmodel/util/: balltracker.cpp  kalman.cpp  robottracker.cpp  tracker.cpp
thesis_ws/src/pack_world_model/src/worldmodel/wm/: ball.cpp  halfworld.cpp  movingobject.cpp  rawobject.cpp  robot.cpp  visionbelief.cpp  visionclient.cpp  worldmodel.cpp
